argo rollouts added

--- a/kubernetes-manifests/hello.deployment.yaml
+++ b/kubernetes-manifests/hello.deployment.yaml
@@ -1,9 +1,4 @@
-﻿# This Deployment manifest defines:
-# - single-replica deployment of the container image, with label "app: dotnet-hello-world"
-# - Pod exposes port 8080
-# - specify PORT environment variable to the container process
-# Syntax reference https://kubernetes.io/docs/concepts/configuration/overview/
-apiVersion: apps/v1
+﻿apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: dotnet-hello-world
