--- a/kubernetes-manifests/hello.rollouts.service.yaml
+++ b/kubernetes-manifests/hello.rollouts.service.yaml
@@ -1,11 +1,11 @@
 ﻿apiVersion: v1
 kind: Service
 metadata:
-  name: dotnet-hello-world-external
+  name: dotnet-hello-world-external-rollouts
 spec:
   type: NodePort
   selector:
-    app: dotnet-hello-world
+    app: dotnet-hello-world-rollouts
   ports:
   - name: http
     port: 80
