--- a/argo-workflow-with-snyk/argo-hello-world-dotnet-workflow.yaml
+++ b/argo-workflow-with-snyk/argo-hello-world-dotnet-workflow.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Workflow
 metadata:
-  generateName: build-container-image-
+  generateName: build-dotnet-image-
   labels:
     workflows.argoproj.io/archive-strategy: "false"
   namespace: argo
