--- a/argo-events/sensor-webhook-1.yaml
+++ b/argo-events/sensor-webhook-1.yaml
@@ -1,13 +1,13 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Sensor
 metadata:
-  name: webhook
+  name: webhook-dotnet
 spec:
   template:
     serviceAccountName: operate-workflow-sa
   dependencies:
   - name: test-dep
-    eventSourceName: webhook
+    eventSourceName: webhook-dotnet
     eventName: example
   triggers:
     - template:
